# vygauss

./: .gitignore  BENCHMARKING.md  README.md  ape-config.yaml  pyproject.toml
scripts/: cdf.py  compute_boa_call_overhead.py  erfc.py  erfcinv.py  erfinv.py  gas_benchmark.py  ppf.py
src/: gaussian.vy
tests/: conftest.py  test_contract.py  test_gaussian.py
